# SimpleNewton

./: CMakeLists.txt  README.md  simpleNewtonConfig.h.in
doc/: doxycon.in  mainpage.dox
lib/: Asserts.cpp  Asserts.hh  Asserts.hpp  BasicBases.hpp  BasicTypeTraits.cpp  BasicTypeTraits.hpp  BasicTypeTraits.macro.hpp  CMakeLists.txt  Containers.hh  Containers.hpp  Exit.hpp  Functor.hpp  Global.cpp  Global.hpp  GlobalConstants.hh  GlobalConstants.hpp  Logger.cpp  Logger.hpp  Readability_readme.txt  TypeConstraints.cpp  TypeConstraints.hpp  TypeTraits.hh  TypeTraits.hpp  Typelist.hpp  Typelist.impl.hpp  Types.hh  Types.hpp
lib/asserts/: Asserts.cpp  Asserts.hpp  CMakeLists.txt  TypeConstraints.cpp  TypeConstraints.hpp
lib/concurrency/: BaseComm.cpp  BaseComm.hpp  CMakeLists.txt  Communicator.hpp  OMPLoops.cpp  OMPLoops.hpp  OpenMP.hpp  ThreadPool.cpp  ThreadPool.hpp
lib/containers/: CMakeLists.txt  Container.cpp  Container.hpp  Container.impl.hpp  DArray.cpp  DArray.hpp  FArray.cpp  FArray.hpp  Field.cpp  Field.hpp  Matrix2.cpp  Matrix2.hpp  Matrix3.cpp  Matrix3.hpp  OpenStringBuffer.cpp  OpenStringBuffer.hpp  RAIIWrapper.cpp  RAIIWrapper.hpp  SmallMV.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
lib/containers/mpi/: FastBuffer.cpp  FastBuffer.hpp  MPIRequest.cpp  MPIRequest.hpp  OpenMPIBuffer.cpp  OpenMPIBuffer.hpp
lib/core/: CMakeLists.txt  Communicator.cpp  Communicator.hpp  DBlock.hpp  ExceptionMacros.hpp  Exceptions.cpp  Exceptions.hpp  Exit.cpp  MPIManager.cpp  MPIManager.hpp  ProcSingleton.cpp  ProcSingleton.hpp  ProcTimer.hpp  Simulator.cpp  Simulator.hpp  ULoops.cpp  ULoops.hpp  World.cpp  World.hpp
lib/core/kinematics/: AllWKBBs.hpp  EulerExplicitWKBB.hpp  WorldKinematicsBB.hpp
lib/core/math/: KinematicIntegrator.hpp
lib/geometry/: CMakeLists.txt  Object.cpp  Object.hpp  Point.cpp  Point.hpp
lib/logger/: BasicTypenameStr.hpp  CMakeLists.txt  Logger.cpp  Logger.hpp
lib/types/: BasicTypeTraits.cpp  BasicTypeTraits.hpp  BasicTypeTraits.impl.hpp  CMakeLists.txt  DTInfo.cpp  DTInfo.hpp  Functor.hpp  Typelist.cpp  Typelist.hpp  Typelist.impl.hpp
prog/: AssertTest.cpp  ContainerTest.cpp  FieldTest.cpp  LoggerTest.cpp  MPITest.cpp  OMPTest.cpp  Test.cpp  TypelistTest.cpp
